k8s/ui-gateway.yml
#@ load("@ytt:data", "data")
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pos-ui-gateway
spec:
  selector:
    istio: ingressgateway #! use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      mode: PASSTHROUGH
    hosts:
    - #@ data.values.posUri
