k8s/ui-virtualservice.yml
#@ load("@ytt:data", "data")
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pos-ui-service
spec:
  hosts:
  - #@ data.values.posUri
  gateways:
  - pos-ui-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pos-ui-service
        port:
          number: 8090
